--- a/BDD/.classpath
+++ b/BDD/.classpath
@@ -6,6 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/home/lourdel/eclipse-workspace/mysql-connector-java-8.0.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/nico/eclipse-workspace/eclipse-monespace/BDD/mysql-connector-java-8.0.15.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
