--- a/BDD/.classpath
+++ b/BDD/.classpath
@@ -6,6 +6,10 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/nico/eclipse-workspace/eclipse-monespace/BDD/mysql-connector-java-8.0.15.jar"/>
+	<classpathentry kind="lib" path="C:/Users/nico/eclipse-workspace/eclipse-monespace/BDD/lib/mysql-connector-java-8.0.15.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
