--- a/nicolasLourdelCnamApCalculImpot2/.project
+++ b/nicolasLourdelCnamApCalculImpot2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>nicolasLourdelCnamApCalculImpot2</name>
+	<name>NFA032-calculImpotObjet</name>
 	<comment></comment>
 	<projects>
 	</projects>
