--- a/NFA011-Java-BDD/.classpath
+++ b/NFA011-Java-BDD/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/nico/eclipse-workspace/eclipse-monespace/BDD/lib/mysql-connector-java-8.0.15.jar">
+	<classpathentry kind="lib" path="lib/mysql-connector-java-8.0.15.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
