chgmt nom projet NFA032-readWrite

--- a/NFA032-readWrite/.project
+++ b/NFA032-readWrite/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Ecriture</name>
+	<name>NFA032-readWrite</name>
 	<comment></comment>
 	<projects>
 	</projects>
