--- a/NFA032-aerienInterface/.project
+++ b/NFA032-aerienInterface/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>interface</name>
+	<name>NFA032-aerienInterface</name>
 	<comment></comment>
 	<projects>
 	</projects>
