--- a/NFA019-swing/.project
+++ b/NFA019-swing/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>NFA019</name>
+	<name>NFA019-swing</name>
 	<comment></comment>
 	<projects>
 	</projects>
