chgmt nom projet fromCsvToBDD

--- a/fromCsvToBDD/.project
+++ b/fromCsvToBDD/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TpCnam_lourdel_csv</name>
+	<name>NFA032-fromCsvToBDD</name>
 	<comment></comment>
 	<projects>
 	</projects>
