--- a/Module2/.classpath
+++ b/Module2/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/home/lourdel/Bureau/tester.jar">
+	<classpathentry kind="lib" path="C:/Users/nico/eclipse-workspace/testerModule.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
